--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -9,3 +9,8 @@ Unit2:
   description: Learn (JavaScript|Python|Java).  Start Agile development process.
   start: 4
   end: 7
+Unit3:
+  title: Passion Project & Team Teach HWs
+  description: Passion Project Work
+  start: 8
+  end: 11
