--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -14,3 +14,8 @@ Unit3:
   description: Passion Project Work
   start: 8
   end: 11
+Unit4:
+  title: Binary and Team Teach HWs
+  description: yippee yay
+  start: 12
+  end: 15
