--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -19,3 +19,8 @@ Unit4:
   description: yippee yay
   start: 12
   end: 15
+Unit5:
+  title: Passion Project Ideation
+  description: yuhhhh
+  start: 16
+  end: 20
