--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -24,3 +24,13 @@ Unit5:
   description: yuhhhh
   start: 16
   end: 20
+Unit6:
+  title: Casino Sim, Login PP
+  description: skibidi
+  start: 21
+  end: 24
+ Unit7:
+  title: Machine Learning
+  description: rizzler
+  start: 25
+  end: 28
